--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<html>
+	<title>Viram</title>
+	<head>
+		<link rel="stylesheet" type="text/css" href="mystyle.css">
+
+	</head>
+		<a href="https://viram.site" id="logo">
+		<img src="viramlogo.png"/></a>
+	<body>
+	</body>
+</html>
