--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <html>
-	<title>Viram</title>
+	<title>Viram, Moments Never Fade</title>
 	<head>
+		<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="mystyle.css">
-
 	</head>
-		<a href="https://viram.site" id="logo">
-		<img src="viramlogo.png"/></a>
 	<body>
+		<div id="header">
+			<p><br><br><br><br><br><br><b>Viram,</b><br> <i>Moments<br>Never Fade.<br><br><br><br><br><br></i></p>
+		</div>
+		<div id="nav">
+			<ul>
+				<a herf="JeonNam.html">JeonNam<br></a>
+				<a herf="180801.html">180801<br></a>
+				<a herf="180810 LotteMall.html">180810 LotteMall<br></a>
+				<a herf="180814 HongDae.html">180814 HongDae<br></a>
+			</ul>
+		</div>
+		<div id=content">
+			<img class='picture' src="http://cfile5.uf.tistory.com/original/99C3D5485B7AE3500BC587"/>
+		</div>
 	</body>
 </html>
