--- a/index.html
+++ b/index.html
@@ -1,23 +1,38 @@
+<!DOCTYPE html>
 <html>
 	<title>Viram, Moments Never Fade</title>
 	<head>
 		<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="mystyle.css">
+		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssreset/reset-min.css">
+		<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script src="http://code.jQuery.com/jQuery-latest.js" type="text/javascript"></script>
+		<script type="text/javascript" src="js/js.js"></script>
+		<script type="text/javascript" src="js/html5slider.js"></script>
 	</head>
 	<body>
 		<div id="header">
 			<p><br><br><br><br><br><br><b>Viram,</b><br> <i>Moments<br>Never Fade.<br><br><br><br><br><br></i></p>
 		</div>
-		<div id="nav">
+		<div id="player">
+			<div class="playerBox">
+				<a class="button gradient" id="play" href="" title=""></a>
+				<a class="button gradient" id="pause" href="" title=""></a>
+				<a class="button gradient" id="stop" href="" title=""></a>
+					<input type="range" id="seek" value="0" max=""/>
+			</div>
+		</div><!-- /player -->
+<!--	<div id="nav">
 			<ul>
 				<a herf="JeonNam.html">JeonNam<br></a>
 				<a herf="180801.html">180801<br></a>
 				<a herf="180810 LotteMall.html">180810 LotteMall<br></a>
 				<a herf="180814 HongDae.html">180814 HongDae<br></a>
 			</ul>
-		</div>
-		<div id=content">
+		</div>-->
+<!--		<div id=content">
 			<img class='picture' src="http://cfile5.uf.tistory.com/original/99C3D5485B7AE3500BC587"/>
-		</div>
+		</div>-->
 	</body>
 </html>
