--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
 
 	</head>
 	<body>
-		<div id="header">
+		<div id="text">
 			<p><br><br><br><br><br><br><b>Viram,</b><br> <i>Moments<br>Never Fade.<br><br><br><br><br><br></i></p>
 		</div>
+		<img src="img/title.gif">
 		<div id="player">
 			<div class="playerBox">
 				<button class="button gradient" id="play" href="" title="">&#9654;</button>
 				<button class="button gradient" id="pause" href="" title="">&#10074;&#10074;</button>
 				<button class="button gradient" id="stop" href="" title="">&FilledSmallSquare;</button>
-				<input type="range" id="seek" value="100" max=""/>
+				<input type="range" id="seek" value="10" max=""/>
 			</div>
 		</div><!-- /player -->
+		<div id="text">
+			<p> <br><br>music <br> BRLLNT - Toxic (from Britney Spears - Toxic) </p>
+		</div>
 <!--	<div id="nav">
 			<ul>
 				<a herf="JeonNam.html">JeonNam<br></a>
