--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/mystyle.css">
 		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.3.0/build/cssreset/reset-min.css">
-		<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-		<script src="http://code.jQuery.com/jQuery-latest.js" type="text/javascript"></script>
+		<link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+		<script src="https://code.jQuery.com/jQuery-latest.js" type="text/javascript"></script>
 
 	</head>
 	<body>
