--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		<div id="text">
 			<p> <br><br>music <br> BRLLNT - Toxic (from Britney Spears - Toxic) </p>
 		</div>
+		<p id="lol"></p>
 <!--	<div id="nav">
 			<ul>
 				<a herf="JeonNam.html">JeonNam<br></a>
